After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723564 - window-x11: Fix offscreen window match expression
window-x11: Fix offscreen window match expression
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2014-02-03 22:08 UTC by Jonas Ådahl
Modified: 2014-02-03 22:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
window-x11: Fix offscreen window match expression (1.05 KB, patch)
2014-02-03 22:08 UTC, Jonas Ådahl
committed Details | Review

Description Jonas Ådahl 2014-02-03 22:08:09 UTC
Signed-off-by: Jonas Ådahl <jadahl@gmail.com>
Comment 1 Jonas Ådahl 2014-02-03 22:08:10 UTC
Created attachment 268010 [details] [review]
window-x11: Fix offscreen window match expression
Comment 2 Jasper St. Pierre (not reading bugmail) 2014-02-03 22:19:33 UTC
Review of attachment 268010 [details] [review]:

Whoops, yes.
Comment 3 Jasper St. Pierre (not reading bugmail) 2014-02-03 22:35:31 UTC
Attachment 268010 [details] pushed as 2db9f55 - window-x11: Fix offscreen window match expression